Work on NAS-1854. Disabled two unittest, broken by NAS-1918